--- a/css/custom.css
+++ b/css/custom.css
@@ -19,6 +19,7 @@ header {
     top: 0;
     width: 100%;
     z-index: 1000;
+    box-shadow: 0px 9px 45px -18px rgba(0, 0, 0, 0.534);
    }
 
    header .container {
@@ -30,6 +31,23 @@ header {
     border: 5px solid #fff;
 }
 
+.redes{
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    justify-content: flex-start;
+    list-style: none;
+    padding-left: 0px;
+}
+
+.redes>li{
+    transition: transform 0.3s;
+}
+
+.redes > li:hover{
+    transform: scale(1.25);
+}
+
 #projetos .card {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
@@ -37,9 +55,11 @@ header {
 
 #projetos .card:hover {
     transform: scale(1.05);
+    box-shadow: 0px 9px 45px -18px rgba(0, 0, 0, 0.534);
 }
 
 #contato .form-control {
     margin-bottom: 1rem;
-   }
+}
+
    
