--- a/css/custom.css
+++ b/css/custom.css
@@ -58,6 +58,13 @@ header {
     box-shadow: 0px 9px 5px 5px rgba(0, 0, 0, 0.295);
 }
 
+
+
+.card-img-top{
+    width: 120px;
+    height: 120px;
+}
+
 #contato .form-control {
     margin-bottom: 1rem;
 }
